0032626: Samples - add Qt::WA_NativeWindow attribute to Qt IESample